--- a/.github/workflows/update-database.yml
+++ b/.github/workflows/update-database.yml
@@ -25,6 +25,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
         uses: actions/checkout@v3
+      
+      # Install SQL Server Data Tools
+      - name: Install SQL Server Data Tools
+      run: |
+        choco install visualstudio2019buildtools -y
+        choco install mssql-server-sqlpackage -y
+        RefreshEnv.cmd 
 
       # Setup .NET
       - name: Set up MSBuild
