--- a/.github/workflows/update-database.yml
+++ b/.github/workflows/update-database.yml
@@ -33,11 +33,11 @@ jobs:
       - name: Install SQL Server Data Tools
         run: |
           choco install visualstudio2019buildtools -y
-          choco install mssql-server-sqlpackage -y
+          #choco install mssql-server-sqlpackage -y
           Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
 
       - name: Install sqlpackage
-        run: choco install mssql-server-sqlpackage -y --source="'https://chocolatey.org/api/v2/'"
+        #run: choco install mssql-server-sqlpackage -y --source="'https://chocolatey.org/api/v2/'"
         
       # Setup .NET
       - name: Set up MSBuild
