--- a/.github/workflows/update-database.yml
+++ b/.github/workflows/update-database.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           Invoke-WebRequest -Uri https://aka.ms/sqlpackage -OutFile sqlpackage.zip
           Expand-Archive -Path .\sqlpackage.zip -DestinationPath C:\sqlpackage
-          [Environment]::SetEnvironmentVariable("Path", $env:Path + ";C:\sqlpackage", [System.EnvironmentVariableTarget]::Machine)
+          [Environment]::SetEnvironmentVariable("Path", $env:Path + ";C:\sqlpackage", [System.EnvironmentVariableTarget]::Machine) -verbose
 
       
       # Read Changes from JSON
