--- a/.github/workflows/update-database.yml
+++ b/.github/workflows/update-database.yml
@@ -54,9 +54,10 @@ jobs:
       # Download and Install sqlpackage     
       - name: Download and Install sqlpackage
         run: |
-          Invoke-WebRequest -Uri https://aka.ms/sqlpackage -OutFile sqlpackage.zip -verbose
-          Expand-Archive -Path .\sqlpackage.zip -DestinationPath .\sqlpackage -verbose
-          [Environment]::SetEnvironmentVariable("Path", $env:Path + ";.\sqlpackage", [System.EnvironmentVariableTarget]::Machine) 
+          Invoke-WebRequest -Uri https://go.microsoft.com/fwlink/?linkid=2157202 -OutFile SqlPackage.zip
+          Expand-Archive -Path .\SqlPackage.zip -DestinationPath C:\sqlpackage
+          Remove-Item .\SqlPackage.zip
+          [System.Environment]::SetEnvironmentVariable('Path', "$env:Path;C:\sqlpackage", [System.EnvironmentVariableTarget]::Machine)
 
       
       # Read Changes from JSON
@@ -73,7 +74,7 @@ jobs:
       # Update Database Schema
       - name: Update Database Schema        
         run: |
-         .\sqlpackage /a:Script /sf:./GBSMrktDb/bin/Debug/GBSMrktDb.dacpac /p:OutputPath=./Script/Script.sql
+         C:\sqlpackage\SqlPackage.exe /a:Script /sf:./GBSMrktDb/bin/Debug/GBSMrktDb.dacpac /p:OutputPath=./Script/Script.sql
 
           
       # Configure Git  
