--- a/.github/workflows/update-database.yml
+++ b/.github/workflows/update-database.yml
@@ -72,7 +72,7 @@ jobs:
           echo "::set-output name=json_changes::$(cat ./JsonSchema/changes.json)"
       
       - name: List Contents of C:\sqlpackage
-        run: Get-ChildItem -Path C:\sqlpackage
+        run: Get-ChildItem -Path .\sqlpackage
         
       # Update Database Schema
       - name: Update Database Schema        
