--- a/.github/workflows/update-database.yml
+++ b/.github/workflows/update-database.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout Repository
-        uses: actions/checkout@v3\
+        uses: actions/checkout@v3
       
       # Install SQL Server Data Tools
       - name: Ensure Default Chocolatey Source
